--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "frontend": "npm start --prefix my-app",
-    "dev":"npm-run-all -p -r  server  frontend"
+    "dev": "npm-run-all -p -r  server  frontend"
   },
   "author": "hamzat",
   "license": "ISC",
@@ -26,5 +26,8 @@
   },
   "engines": {
     "node": "18.7.0"
-    }
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
